samples/_failures_safe/1761149315_d3f252_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a72047f3.c: In function ‘main’:
./samples/SAFE/__tmp_a72047f3.c:148:9: error: expected expression at end of input
  148 |         if (scanf("%d %d %d", &src, &dest,
      |         ^~
./samples/SAFE/__tmp_a72047f3.c:148:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a72047f3.c:148:9: error: expected declaration or statement at end of input
